part3/Frontend/Phonebook/src/index.css
h1 {
  color: green;
}
.notification {
  position: fixed;
  top: 20px;
  right: 20px;
  padding: 15px 25px;
  font-size: large;
  font-weight: 600;
  font-style: monospace;
  border-radius: 5px;
  /* background: green; */
  color: white;
  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
  z-index: 1000;
  animation: fadeIn 0.3s, fadeOut 0.3s 4.7s;
}

@keyframes fadeIn {
  from { opacity: 0; transform: translateY(-20px); }
  to { opacity: 1; transform: translateY(0); }
}

@keyframes fadeOut {
  from { opacity: 1; transform: translateY(0); }
  to { opacity: 0; transform: translateY(-20px); }
}

